# data_queries_demo

./: .gitignore  main.py  main_old.py  main_old2.py  pyproject.toml
.streamlit/: config.toml
data/: integration_notebook.ipynb  portlight_data.csv  r2023.xlsx  r2024.xlsx  rISP_2023.xlsx  rISP_2024.xlsx  rMDN_2023.xlsx  rMDN_2024.xlsx
data/.id/: company_info.csv  eurofxref-hist.csv
data/disclosures_pdf/: batch_in_2024.csv
data/freeports_data/batch_out_2024/: .log.csv  investments.csv  investments_add_infos.yaml
data/freeports_data/batch_out_BR_SOY_DEFOREST_3K_2024/: .log.csv  investments.csv
data/old/: Eurizon_Fund_saJ2023.xlsx  amundi_output.csv  amundi_output_st.csv  anima_output.csv  anima_output_st.csv  eurizon_output.csv  eurizon_output_st.csv  exp_Eurizon_Fund_saJ2023.xlsx
data/old2/: r2023.xlsx  r2024.xlsx
data_new/: rALL_2023.xlsx  rALL_2024.xlsx
pages/: write_your_page.py
src/: Bubblechart.py  Constants.py  utils.py
