[project]
name = "founds-investiments"
version = "0.1.0"
description = ""
authors = [
    {name = "TOPPETTI Edoardo",email = "edoardo.toppetti@ext.ec.europa.eu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.46.0,<2.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]

[tool.poetry]
packages = [{include = "founds_investiments", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
